--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
                         android:textColor="#000000"
+                        android:id="@+id/userName"
                         android:textSize="15sp" />
 
                 </LinearLayout>
@@ -99,6 +100,8 @@
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
                         android:textColor="#000000"
+                        android:inputType="textPassword"
+                        android:id="@+id/password"
                         android:textSize="15sp" />
 
                 </LinearLayout>
@@ -106,7 +109,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btnlogin"
+                android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_below="@+id/linlay1"
