--- a/app/src/main/res/layout/views_account.xml
+++ b/app/src/main/res/layout/views_account.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="20dp"
         android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/editAccount"
+            android:layout_toStartOf="@id/editAdmin"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/general"/>
+            android:text="@string/admin_settings"/>
 
         <ImageButton
-            android:id="@+id/editAccount"
+            android:id="@+id/editAdmin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -38,11 +39,11 @@
             android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_alignBottom="@id/editAccount"
+            android:layout_alignBottom="@id/editAdmin"
             android:background="#808080" />
 
         <LinearLayout
-            android:id="@+id/shopLayout"
+            android:id="@+id/userNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view1"
@@ -56,10 +57,10 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="@string/shop_name"/>
+                android:text="@string/username"/>
 
             <TextView
-                android:id="@+id/shopName"
+                android:id="@+id/userName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -69,13 +70,12 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/branchLayout"
+            android:id="@+id/adminPasswordLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/shopLayout"
+            android:layout_below="@+id/userNameLayout"
             android:weightSum="2"
             android:layout_marginTop="20dp"
-            android:paddingBottom="15dp"
             android:orientation="horizontal">
 
             <TextView
@@ -84,94 +84,50 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="@string/branch_name"/>
+                android:text="@string/password"/>
 
-            <TextView
-                android:id="@+id/branchName"
+            <EditText
+                android:id="@+id/adminPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/branch_name"/>
+                android:background="@color/transparent"
+                android:textColor="@color/colorPrimaryDark"
+                android:inputType="textPassword"
+                android:clickable="false"
+                android:enabled="false"
+                android:text="@string/password"
+                tools:ignore="autoFill,LabelFor" />
 
         </LinearLayout>
-
-
-
     </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginBottom="40dp"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignTop="@id/editLogo"
-            android:background="#808080" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/editLogo"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/change_logo"/>
-
-        <ImageButton
-            android:id="@+id/editLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_edit"
-            android:layout_alignParentEnd="true"
-            style="?attr/actionBarDivider"
-            android:textColor="@color/white"
-            android:contentDescription="@string/scan"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"/>
-
-        <View
-            android:id="@+id/view3"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignBottom="@id/editLogo"
-            android:background="#808080" />
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="20dp"
         android:padding="10dp">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_alignTop="@id/editDateTime"
+            android:layout_alignTop="@id/editStaff"
             android:background="#808080" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/editDateTime"
+            android:layout_toStartOf="@id/editStaff"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:paddingTop="10dp"
-            android:text="@string/date_and_time"/>
+            android:text="@string/staff_settings"/>
 
         <ImageButton
-            android:id="@+id/editDateTime"
+            android:id="@+id/editStaff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -189,11 +145,11 @@
             android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_alignBottom="@id/editDateTime"
+            android:layout_alignBottom="@id/editStaff"
             android:background="#808080" />
 
         <LinearLayout
-            android:id="@+id/dateLayout"
+            android:id="@+id/staffUserNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view2"
@@ -207,10 +163,10 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="@string/server_date"/>
+                android:text="@string/username"/>
 
             <TextView
-                android:id="@+id/serverDate"
+                android:id="@+id/staffUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -220,10 +176,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/timeLayout"
+            android:id="@+id/staffPasswordLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dateLayout"
+            android:layout_below="@+id/staffUserNameLayout"
             android:weightSum="2"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
@@ -234,43 +190,21 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="@string/server_time"/>
+                android:text="@string/password"/>
 
-            <TextView
-                android:id="@+id/serverTime"
+            <EditText
+                android:id="@+id/staffPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/branch_name"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/timeZoneLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/timeLayout"
-            android:weightSum="2"
-            android:layout_marginTop="20dp"
-            android:paddingBottom="15dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:text="@string/timezone"/>
-
-            <TextView
-                android:id="@+id/serverTimeZone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/branch_name"/>
+                android:background="@color/transparent"
+                android:textColor="@color/colorPrimaryDark"
+                android:inputType="textPassword"
+                android:clickable="false"
+                android:enabled="false"
+                android:text="@string/password"
+                tools:ignore="autoFill,LabelFor" />
 
         </LinearLayout>
 
