--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="320dp"
             android:layout_height="73dp"
             android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_logore" />
 
@@ -64,7 +65,7 @@
                             android:theme="@style/EditTextTheme"
                             android:layout_width="match_parent"
                             android:layout_height="45dp"
-                            android:hint="Username"
+                            android:hint="@string/username"
                             android:id="@+id/userName"
                             android:inputType="text"
                             android:textColor="@color/black"
@@ -98,7 +99,7 @@
                             android:theme="@style/EditTextTheme"
                             android:layout_width="match_parent"
                             android:layout_height="45dp"
-                            android:hint="Password"
+                            android:hint="@string/password"
                             android:textColor="@color/black"
                             android:inputType="textPassword"
                             android:textColorHint="@color/black"
@@ -118,7 +119,7 @@
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                 android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/linlay1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
