--- a/app/src/main/res/layout/views_profile.xml
+++ b/app/src/main/res/layout/views_profile.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
 
     <LinearLayout
@@ -22,22 +23,23 @@
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/editAccount"
                 android:textStyle="bold"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorPrimaryDark"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:paddingTop="10dp"
                 android:text="@string/general"/>
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/editAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_edit"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_alignParentEnd="true"
-                style="?attr/actionBarDivider"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
+                android:text="@string/edit"
                 android:contentDescription="@string/scan"
-                android:paddingBottom="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"/>
+                app:iconSize="20dp"
+                app:icon="@drawable/ic_edit"/>
 
             <View
                 android:id="@+id/view1"
@@ -58,7 +60,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="@string/shop_name"/>
@@ -68,7 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:text="@string/shop_name"/>
 
             </LinearLayout>
@@ -85,7 +89,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="@string/branch_name"/>
@@ -95,7 +100,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:text="@string/branch_name"/>
 
             </LinearLayout>
@@ -124,23 +130,22 @@
                 android:layout_toStartOf="@id/editLogo"
                 android:textStyle="bold"
                 android:layout_centerVertical="true"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorPrimaryDark"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:text="@string/change_logo"/>
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/editLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_edit"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_alignParentEnd="true"
-                style="?attr/actionBarDivider"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
+                android:text="@string/edit"
                 android:contentDescription="@string/scan"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"/>
+                app:iconSize="20dp"
+                app:icon="@drawable/ic_edit"/>
 
             <View
                 android:id="@+id/view3"
@@ -173,23 +178,22 @@
                 android:layout_toStartOf="@id/editDateTime"
                 android:paddingTop="10dp"
                 android:text="@string/date_and_time"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorPrimaryDark"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textStyle="bold" />
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/editDateTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_edit"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_alignParentEnd="true"
-                style="?attr/actionBarDivider"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
+                android:text="@string/edit"
                 android:contentDescription="@string/scan"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"/>
+                app:iconSize="20dp"
+                app:icon="@drawable/ic_edit"/>
 
             <View
                 android:id="@+id/view2"
@@ -210,7 +214,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="@string/server_date"/>
@@ -220,7 +225,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:text="@string/shop_name"/>
 
             </LinearLayout>
@@ -237,7 +243,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="@string/server_time"/>
@@ -247,7 +254,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:text="@string/branch_name"/>
 
             </LinearLayout>
@@ -265,7 +273,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="@string/timezone"/>
@@ -275,7 +284,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:text="@string/branch_name"/>
 
             </LinearLayout>
@@ -301,24 +311,24 @@
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/editAdditional"
                 android:textStyle="bold"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorPrimaryDark"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:paddingTop="10dp"
                 android:text="@string/additional_settings"/>
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/editAdditional"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_edit"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_alignParentEnd="true"
-                style="?attr/actionBarDivider"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
+                android:text="@string/edit"
                 android:contentDescription="@string/scan"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"/>
+                app:iconSize="20dp"
+                app:icon="@drawable/ic_edit"
+               />
 
             <View
                 android:id="@+id/view4"
@@ -339,7 +349,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="@string/auto_shutdown"/>
@@ -349,28 +360,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:text="@string/shop_name"/>
 
             </LinearLayout>
         </RelativeLayout>
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_red"
-            style="?attr/actionBarDivider"
+            app:backgroundTint="#FF0000"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:textColor="@color/white"
-            android:text="@string/refresh_server"
-            android:contentDescription="@string/refresh_server"
-            android:src="@drawable/refresh"
-            android:layout_marginStart="15dp"
-            android:layout_marginBottom="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"/>
+            android:contentDescription="@string/scan"
+            android:layout_gravity="center_horizontal"
+            app:iconSize="20dp"
+            android:text="@string/reboot"
+            app:iconTint="@color/white"
+            app:icon="@drawable/refresh"/>
 
     </LinearLayout>
 </ScrollView>
