--- a/app/src/main/res/layout/views_card.xml
+++ b/app/src/main/res/layout/views_card.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
@@ -10,34 +11,40 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
-        <ImageButton
+
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_blue"
-            android:src="@drawable/scan"
+            android:backgroundTint="#02aff3"
+            app:icon="@drawable/scan"
+            android:paddingLeft="28dp"
             style="?attr/buttonStyle"
             android:textColor="@color/white"
             android:layout_marginEnd="10dp"
-            android:contentDescription="@string/scan" />
+            android:contentDescription="@string/scan"
+            android:layout_marginRight="10dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="52dp"
             android:text="@string/delete"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:background="@drawable/btn_red"
-            android:layout_marginEnd="10dp"/>
+            android:backgroundTint="#FF0000"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp" />
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_blue"
-            android:src="@drawable/transfer"
+            android:layout_height="52dp"
+            android:backgroundTint="#02aff3"
+            app:icon="@drawable/transfer"
             style="?attr/buttonStyle"
+            android:paddingLeft="30dp"
             android:textColor="@color/white"
             android:layout_marginEnd="10dp"
-            android:contentDescription="@string/transfer" />
+            android:contentDescription="@string/transfer"
+            android:layout_marginRight="10dp" />
 
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
