--- a/app/src/main/res/layout/views_preset.xml
+++ b/app/src/main/res/layout/views_preset.xml
@@ -10,31 +10,33 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_blue"
+            android:backgroundTint="#02aff3"
             android:text="@string/add"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/edit"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:background="@drawable/btn_blue"
-            android:layout_marginEnd="10dp"/>
+            android:backgroundTint="#02aff3"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:background="@drawable/btn_red"/>
+            android:backgroundTint="#FF0000"/>
 
     </LinearLayout>
     <ListView
