Revert "problema nga ito"
This reverts commit 5846d8f4

--- a/app/src/main/res/layout/views_account.xml
+++ b/app/src/main/res/layout/views_account.xml
@@ -22,9 +22,7 @@
             android:textColor="@color/colorPrimaryDark"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:paddingTop="10dp"
-            android:text="@string/admin_settings"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/editAdmin" />
+            android:text="@string/admin_settings"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/editAdmin"
@@ -37,8 +35,7 @@
             android:text="@string/edit"
             android:contentDescription="@string/scan"
             app:iconSize="20dp"
-            app:icon="@drawable/ic_edit"
-            android:layout_alignParentRight="true" />
+            app:icon="@drawable/ic_edit"/>
 
         <View
             android:id="@+id/view1"
@@ -133,9 +130,7 @@
             android:textColor="@color/colorPrimaryDark"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:paddingTop="10dp"
-            android:text="@string/staff_settings"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/editStaff" />
+            android:text="@string/staff_settings"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/editStaff"
@@ -148,8 +143,7 @@
             android:text="@string/edit"
             android:contentDescription="@string/scan"
             app:iconSize="20dp"
-            app:icon="@drawable/ic_edit"
-            android:layout_alignParentRight="true" />
+            app:icon="@drawable/ic_edit"/>
 
         <View
             android:id="@+id/view2"
