--- a/app/src/main/res/layout/views_card.xml
+++ b/app/src/main/res/layout/views_card.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
@@ -11,40 +10,34 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#02aff3"
-            app:icon="@drawable/scan"
-            android:paddingLeft="28dp"
+            android:background="@drawable/btn_blue"
+            android:src="@drawable/scan"
             style="?attr/buttonStyle"
             android:textColor="@color/white"
             android:layout_marginEnd="10dp"
-            android:contentDescription="@string/scan"
-            android:layout_marginRight="10dp" />
+            android:contentDescription="@string/scan" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:layout_width="wrap_content"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:text="@string/delete"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:backgroundTint="#FF0000"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            android:background="@drawable/btn_red"
+            android:layout_marginEnd="10dp"/>
 
-        <com.google.android.material.button.MaterialButton
+        <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="52dp"
-            android:backgroundTint="#02aff3"
-            app:icon="@drawable/transfer"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_blue"
+            android:src="@drawable/transfer"
             style="?attr/buttonStyle"
-            android:paddingLeft="30dp"
             android:textColor="@color/white"
             android:layout_marginEnd="10dp"
-            android:contentDescription="@string/transfer"
-            android:layout_marginRight="10dp" />
+            android:contentDescription="@string/transfer" />
 
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
