--- a/app/src/main/res/layout/views_preset.xml
+++ b/app/src/main/res/layout/views_preset.xml
@@ -10,33 +10,31 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#02aff3"
+            android:background="@drawable/btn_blue"
             android:text="@string/add"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_marginEnd="10dp"/>
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/edit"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:backgroundTint="#02aff3"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            android:background="@drawable/btn_blue"
+            android:layout_marginEnd="10dp"/>
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete"
             style="?attr/buttonBarStyle"
             android:textColor="@color/white"
-            android:backgroundTint="#FF0000"/>
+            android:background="@drawable/btn_red"/>
 
     </LinearLayout>
     <ListView
