--- a/app/src/main/res/layout/views_station.xml
+++ b/app/src/main/res/layout/views_station.xml
@@ -12,36 +12,35 @@
         android:padding="10dp"
         android:orientation="horizontal">
         <com.google.android.material.button.MaterialButton
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#02aff3"
+            app:backgroundTint="#02aff3"
             android:text="@string/add"
-            style="?attr/buttonBarStyle"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
-            android:layout_marginEnd="11dp"
-            android:layout_marginRight="10dp" />
+            android:layout_marginEnd="11dp" />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:backgroundTint="#02aff3"
+            app:backgroundTint="#02aff3"
             app:icon="@drawable/hostscan"
-            style="?attr/buttonStyle"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
-            android:paddingLeft="27dp"
+            android:paddingStart="27dp"
+            android:paddingEnd="0dp"
             android:layout_marginEnd="10dp"
-            android:contentDescription="@string/scan"
-            android:layout_marginRight="10dp" />
+            android:contentDescription="@string/scan" />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete"
-            style="?attr/buttonBarStyle"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
-            android:backgroundTint="#FF0000"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            app:backgroundTint="#FF0000"
+            android:layout_marginEnd="10dp" />
 
 
 
